fixed coupon button being off center on mobile

--- a/src/sass/components/_store.scss
+++ b/src/sass/components/_store.scss
@@ -47,3 +47,12 @@
   	width: 100% !important;
 	}
 }
+table.cart {
+	td.actions {
+		input[name=apply_coupon] {
+			@media screen and (max-width: 65.141em) {
+				margin-left: 0 !important;
+			}
+		}
+	}
+}
